# setup.cfg file at the root directory
[metadata]
name = pcf8591-library
version = 0.0.1
author = Renzo Mischianti
description = PCF8591 micropython library for Arduino, Raspberry Pi Pico and rp2040 boards, esp32, SMT32 and ESP8266
long_description = MicroPython library to use pcf8591 i2c analog IC with Arduino, Raspberry Pi Pico and rp2040 boards, esp32, SMT32 and ESP8266. Can read analog value and write analog value with only 2 wire.
url = https://github.com/xreef/PCF8591_micropython_library
keywords = analog, micropython, i2c, expander, pcf8591, esp32, esp8266, stm32, SAMD, Arduino, wire, Raspberry, rp2040
[options]
python_requires = >=3.7
# install_requires =
#     pandas
# [options.extras_require]
# test =
#     pytest
#     coverage
[options.package_data]
sample = ['examples/*']
[options.packages.find]
where = src
# [options.entry_points]
# console_scripts =
#     sample=sample:main
# [bdist_wheel]
# universal = 1

